@@ -170,7 +170,7 @@
     <script type="text/javascript" src="../js/jquery.validate.js"></script>
     <script type="text/javascript" src="../js/bbq.js"></script>
     <script type="text/javascript" src="../js/jquery-ui-1.8.5.custom.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.form.wizard-3.0.4.js"></script>
+    <script type="text/javascript" src="../js/jquery.form.wizard.js"></script>
     
     <script type="text/javascript">
 			$(function(){
