@@ -1,3 +1,8 @@
+
+
+- use eq(0) instead of first() for backwards compatibility with jQuery < 1.4 
+- rename the javascript file from jquery.form.wizard-3.0.4.js to jquery.form.wizard.js for easier maintenance around releases. Updated examples to refer to the new filename.
+
 October 22.
 
 Version 3.0.4 released. Changes:
